<resources>
    <string name="app_name">Resume</string>
    <string name="profile_string">Profile</string>
    <string name="resume_string">Resume</string>
    <string name="share_string">Share</string>

    <string name="name_string">Ashish Gopal Hattimare</string>
    <string name="branch_string">Computer Science and Engineering</string>
    <string name="college_string">Motilal Nehru National Institute of Technology, Allahabad</string>
    <string name="email_string">ashishgopalhattimare@gmail.com</string>
    <string name="location_string">Allahabad (U.P) currently</string>
    <string name="phone_string">(959) 942 2741</string>
    <string name="extension_string">+91 </string>
    <string name="calender_string">31 / 12 / 1997</string>
    <string name="birth_string">New Delhi, India</string>

    <string name="description_string">
        I love being creative, exploring and broadening my horizons to be a
        better Software Developer. I am enthusiatic to user interface and experience design.
    </string>

    <string name="education_string">Education</string>
    <string name="technical_string">Skills</string>
    <string name="project_string">Project</string>
    <string name="achievement_string">Achievements</string>

    <string name="project_duration">Duration : </string>
    <string name="project_days"> days</string>

    <string name="minesweeper_title">Minesweeper Pro</string>
    <string name="minesweeper_description">
        <![CDATA[
    <p>
        Minesweeper is a desktop appication game which is build using Java GUI Development. The working of
        the game is very much similar to the default minesweeper game fron windows xp.
    </p>
    <p>
        The game include timer which start when the player mines the first block of the game. The timer
        is displayed digitally which is created by using digital-number images from the images folder in
        the directory.<br/><br/>It also includes help option which could be used to get detailed
        description about the game components.
    </p>
    <p>The game has different level of difficulties. They are as follow:</p>
    - Beginner<br/>
    - Intermediate<br/>
    - Expert<br/>
    - <b>Custom : </b>This option allow the user to customize the level of difficulty on their own.

    <br/><br/>
    <b>IDE Used : </b>Eclipse for JavaEE Developers
]]>
    </string>

    <string name="brick_breaker_title">Brick Breaker</string>
    <string name="brick_breaker_description">
        <![CDATA[
    <p>
        Brick breaker is a desktop application game which is build using Java Object Oriented programming
        and GUI Development. The working of the game is very much similar to the traditional Brick Breaker
        game. The game has total 10 Levels where the difficulty of level increases as the player progress.
    </p>
    <p> The Game consists of two mode: </p>
    <p>
    	<b>
        - Campaign Mode<br/>
        - Level Mode<br/>
    	</b>
    </p>
    <p><em><q>Level mode allows player to play only one level as a demo to Campaign mode</q></em></p>
    <p>There are multiple cheats available in the game which could be viewed in game Setting.</p>

    <b>IDE Used : </b>IntelliJ IDEA
]]>

    </string>



</resources>
