<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:paddingTop="30dp"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/white">

        <LinearLayout
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_gravity="center"
                android:id="@+id/profile_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:clickable="true"
                android:background="?selectableItemBackgroundBorderless"
                android:elevation="4dp"
                android:stateListAnimator="@drawable/raise_anim"
                android:src="@drawable/profile_image"/>

            <TextView
                android:layout_margin="10dp"
                android:id="@+id/name_TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_string"

                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:gravity="center"/>

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"

                android:id="@+id/branch_TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/branch_string"

                android:textSize="13sp"
                android:textColor="@android:color/black"
                android:gravity="center"/>

            <TextView
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:id="@+id/college_TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/college_string"

                android:textSize="13sp"
                android:textColor="@android:color/black"
                android:gravity="center"/>

        </LinearLayout>

        <View
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"

            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"

            android:layout_gravity="center"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/email_image"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:srcCompat="@drawable/email" />

                <Space  android:layout_width="15dp"
                    android:layout_height="match_parent" />

                <TextView
                    android:paddingTop="5dp"
                    android:gravity="center|start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="13sp"
                    android:textColor="@android:color/black"
                    android:text="@string/email_string"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/location_image"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:srcCompat="@drawable/location" />

                <Space  android:layout_width="15dp"
                    android:layout_height="match_parent" />

                <TextView
                    android:paddingTop="5dp"
                    android:gravity="center|start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:textColor="@android:color/black"
                    android:text="@string/location_string"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/phone_image"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:srcCompat="@drawable/phone" />

                <Space  android:layout_width="15dp"
                    android:layout_height="match_parent" />

                <TextView
                    android:paddingTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:textColor="@android:color/black"
                    android:text="@string/extension_string"/>

                <TextView
                    android:paddingTop="5dp"
                    android:layout_marginLeft="3dp"
                    android:gravity="center|start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="13sp"
                    android:textColor="@android:color/black"
                    android:text="@string/phone_string"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/calender_image"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:srcCompat="@drawable/calendar" />

                <Space  android:layout_width="15dp"
                    android:layout_height="match_parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:gravity="center|start"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="13sp"
                        android:textColor="@android:color/black"
                        android:text="@string/calender_string"/>

                    <TextView
                        android:gravity="center|start"
                        android:textSize="12dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:text="@string/birth_string"/>

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"

            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="italic|bold"
                android:textSize="14sp"
                android:textColor="@android:color/black"
                android:text="@string/description_string"/>

        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:elevation="8dp"
        app:menu="@menu/navigation" />

</android.support.constraint.ConstraintLayout>