<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ResumeActivity">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/detail_backdrop_height"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:fitsSystemWindows="true">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleMarginStart="48dp"
                app:expandedTitleMarginEnd="64dp">

                <ImageView
                    android:id="@+id/backdrop"
                    android:src="@drawable/resume_profile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="Resume Profile Pic"
                    android:scaleType="centerCrop"
                    android:fitsSystemWindows="true"
                    app:layout_collapseMode="parallax" />

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                    app:layout_collapseMode="pin" />

            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <!--1st Row of the List -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_horizontal">

                    <!--1st Column of the Row -->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_height="wrap_content">

                        <android.support.v7.widget.CardView
                            android:id="@+id/education_card"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            card_view:cardUseCompatPadding="true"
                            card_view:cardElevation="6dp"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:layout_margin="10dp"
                            app:cardCornerRadius="0dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical"
                                android:gravity="center">

                                <ImageView
                                    android:layout_width="64dp"
                                    android:layout_height="64dp"
                                    android:src="@drawable/education_logo"
                                    android:background="@drawable/folder_background"
                                    android:padding="10dp"/>
                                <View
                                    android:layout_width="match_parent"
                                    android:layout_height="1dp"
                                    android:background="@android:color/darker_gray"
                                    android:layout_margin="10dp"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textStyle="bold"
                                    android:text="@string/education_string"
                                    android:textColor="@android:color/black"/>

                            </LinearLayout>

                        </android.support.v7.widget.CardView>

                    </LinearLayout>

                    <!--2st Column of the Row -->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_height="wrap_content">

                        <android.support.v7.widget.CardView
                            android:id="@+id/technical_card"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            card_view:cardUseCompatPadding="true"
                            card_view:cardElevation="6dp"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:layout_margin="10dp"
                            app:cardCornerRadius="0dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical"
                                android:gravity="center">

                                <ImageView
                                    android:layout_width="64dp"
                                    android:layout_height="64dp"
                                    android:src="@drawable/skills_logo"
                                    android:background="@drawable/folder_background"
                                    android:padding="10dp"/>
                                <View
                                    android:layout_width="match_parent"
                                    android:layout_height="1dp"
                                    android:background="@android:color/darker_gray"
                                    android:layout_margin="10dp"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textStyle="bold"
                                    android:text="@string/technical_string"
                                    android:textColor="@android:color/black"/>

                            </LinearLayout>

                        </android.support.v7.widget.CardView>

                    </LinearLayout>

                </LinearLayout>

                <!--2nd Row of the List -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_horizontal">

                    <!--1st Column of the Row -->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_height="wrap_content">

                        <android.support.v7.widget.CardView
                            android:id="@+id/project_card"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            card_view:cardUseCompatPadding="true"
                            card_view:cardElevation="6dp"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:layout_margin="10dp"
                            app:cardCornerRadius="0dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical"
                                android:gravity="center">

                                <ImageView
                                    android:layout_width="64dp"
                                    android:layout_height="64dp"
                                    android:src="@drawable/project_logo"
                                    android:background="@drawable/folder_background"
                                    android:padding="10dp"/>
                                <View
                                    android:layout_width="match_parent"
                                    android:layout_height="1dp"
                                    android:background="@android:color/darker_gray"
                                    android:layout_margin="10dp"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textStyle="bold"
                                    android:text="@string/project_string"
                                    android:textColor="@android:color/black"/>

                            </LinearLayout>

                        </android.support.v7.widget.CardView>

                    </LinearLayout>

                    <!--2nd Column of the Row -->
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_height="wrap_content">

                        <android.support.v7.widget.CardView
                            android:id="@+id/achievement_card"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            card_view:cardUseCompatPadding="true"
                            card_view:cardElevation="6dp"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:layout_margin="10dp"
                            app:cardCornerRadius="0dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical"
                                android:gravity="center">

                                <ImageView
                                    android:layout_width="64dp"
                                    android:layout_height="64dp"
                                    android:src="@drawable/achieve_logo"
                                    android:background="@drawable/folder_background"
                                    android:padding="10dp"/>
                                <View
                                    android:layout_width="match_parent"
                                    android:layout_height="1dp"
                                    android:background="@android:color/darker_gray"
                                    android:layout_margin="10dp"/>
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textStyle="bold"
                                    android:text="@string/achievement_string"
                                    android:textColor="@android:color/black"/>

                            </LinearLayout>

                        </android.support.v7.widget.CardView>

                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

        <android.support.design.widget.FloatingActionButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_anchor="@id/appbar"
            app:layout_anchorGravity="bottom|center"
            android:clickable="true"/>

    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:elevation="8dp"
        app:menu="@menu/navigation" />

</android.support.constraint.ConstraintLayout>